Sauvegarde des tentatives d'optimisation mémoire et état actuel des tests